remove scrollbar from recent posts, fixed with for posts

--- a/app/assets/app/components/dashboard/_dashboard.scss
+++ b/app/assets/app/components/dashboard/_dashboard.scss
@@ -80,14 +80,10 @@
 
         .recent_container {
             margin-top:20px;
-            &.table, .table-cell {
-                height: 600px;
-            }
-            padding: 0px;
-            border-color: $dashboard_recent_header_border;
-            .header {
-            }
-            .body {
+            .small_post_directive {
+                width: 200px;
+                vertical-align: top;
+                margin-bottom: 5px;
             }
         }
         // http://blogs.msdn.com/b/kurlak/archive/2015/02/20/filling-the-remaining-height-of-a-container-while-handling-overflow-in-css.aspx
